--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -25,4 +25,12 @@
         </div>
       </div>
     </div>
+    <div>
+      <h2>Users</h2>
+      <ul>
+        <li *ngFor="let user of users">
+          {{ user.name }} ({{ user.email }})
+        </li>
+      </ul>
+    </div>
   </main>
